Allow illegal access scenarios to be tested using -Pgroovy.force.illegal.access=true property.
This doesn't affect the groovy runtime/compiler, it is just a system property which decides
whether the tests will be run or not. We will try to have the build as warning free as possible
but still want the ability to test any still supported functionality which generates warnings.
We may evolve this approach over time.